reworked interface and fixed text clipping on line chart

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -14,3 +14,6 @@ path.leaflet-interactive:focus {
   display: none;
 }
 
+@theme {
+  --text-medium: 1.063rem; /* 17px */
+}
